# open-recorder

./: .gitignore  .mergify.yml  .oneignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  biome.json  electron-builder.json5  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vite.config.ts
.github/: release-plan.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/native/: AreaSelector.swift  ScreenCaptureKitRecorder.swift
apps/desktop/src-tauri/src/: app_paths.rs  lib.rs  main.rs  menu.rs  tray.rs
apps/desktop/src-tauri/src/commands/: cursor.rs  dialogs.rs  files.rs  mod.rs  permissions.rs  recording.rs  screenshot.rs  sources.rs  window_mgmt.rs
apps/desktop/src-tauri/src/input/: mod.rs
apps/desktop/src-tauri/src/native/: cursor_monitor.rs  ffmpeg.rs  macos_capture.rs  sidecar.rs  window_list.rs
apps/desktop/src-tauri/src/state/: mod.rs
apps/desktop/src-tauri/tests/: integration.rs
docs/: appcast.xml  export-dialog-gap-analysis.md
electron/: electron-env.d.ts  preload.ts
scripts/: build-icons.mjs  build-native-helpers.mjs  build-tauri-sidecars.mjs  dispatch-production-release-build.mjs  dispatch-release-build.mjs  dispatch-release-build.zsh  import-macos-signing-certificate.zsh  package-macos-app.zsh  prepare-production-release-pr.mjs  prepare-release-pr.mjs  release-notes.mjs  resolve-release-context.mjs  setup-github-macos-signing.zsh  sign-macos-app-shared.zsh  sign-macos-app.zsh  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/native/: ScreenCaptureKitRecorder.swift  ScreenCaptureKitWindowList.swift  ScreenSelectionFlash.swift
src-tauri/src/: lib.rs  menu.rs  tray.rs
src-tauri/src/commands/: cursor.rs  dialogs.rs  files.rs  mod.rs  permissions.rs  platform.rs  recording.rs  screenshot.rs  settings.rs  sources.rs  window_mgmt.rs
src-tauri/src/input/: global_hooks.rs
src-tauri/src/native/: cursor_assets.rs  cursor_monitor.rs  ffmpeg.rs  macos_capture.rs  mod.rs  sidecar.rs  wgc_capture.rs
src-tauri/src/state/: mod.rs  recording_state.rs
src-tauri/tests/: integration.rs
(+390 files in other folders)
