[package]
name = "open-recorder"
version = "0.0.22"
description = "A free, creator-focused screen recorder"
authors = ["imbhargav5"]
edition = "2021"

[lib]
name = "open_recorder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "protocol-asset", "test"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
open = "5"
percent-encoding = "2"
tauri-plugin-clipboard-manager = "2.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1"
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
